kubernetes/apps/mealie/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.0.2
          imagePullPolicy: Always
          command:
            - /app/run.sh
          volumeMounts:
            - mountPath: /app/data
              name: mealie
          workingDir: /
          resources:
            requests:
              cpu: 305m
              memory: 700Mi
            limits:
              memory: 700Mi
      restartPolicy: Always
      volumes:
        - name: mealie
          persistentVolumeClaim:
            claimName: mealie
