kubernetes/apps/mealie/app/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-private
  namespace: mealie
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mealie.homelab-peej.dev
      secretName: mealie-internal-tls-secret
  rules:
    - host: mealie.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
